# Programation-TI

2048/src/: board.h  case.c  case.h  display.c  display.h  info.h  main.c  main.h  pal.c  pal.h
Ataris/: makefile
Ataris/src/: ball.c  ball.h  core.c  core.h  display.c  display.h  game_info.h  main.c  main.h  map.c  map.h  obstacle.c  obstacle.h
Minesweeper/src/: display.c  display.h  list.c  list.h  logic.c  logic.h  main.c  map.h  minesweeper.h
Minesweeper/src/gfx/: case.c  case_gfx.c  case_gfx.h
Onitama/: makefile
Onitama/src/: card.c  card.h  core.c  core.h  display.c  display.h  game.c  game.h  init.c  init.h  main.c  main.h  sprite.c  sprite.h
Orixo/: makefile
Orixo/src/: core.c  core.h  display.c  display.h  game.c  game.h  main.c  main.h  map_generator.c  map_generator.h
Poker/: CMakeLists.txt
Poker/inc/: bet.h  betRound.h  card.h  checkHand.h  core.h  deck.h  display.h  gameInfo.h  initGame.h  main.h  player.h  playerAction.h  players.h  round.h
Poker/src/: bet.c  betRound.c  card.c  checkHand.c  core.c  deck.c  display.c  initGame.c  main.c  player.c  playerAction.c  players.c  round.c
Test/src/: main.c
Tetris/: makefile
Tetris/src/: color.c  color.h  core.c  core.h  coreDefine.h  display.c  display.h  initPiece.c  initPiece.h  main.c  main.h  struct.h
